@@ -1,3 +1,9 @@
+2002-03-28  Larry Ewing  <lewing@ximian.com>
+
+	* htmlgdkpainter.c (draw_background): optimize away the single
+	pixel transarent gif case, it is simply too expensive over the
+	wire.
+
 2002-03-27  Larry Ewing  <lewing@ximian.com>
 
 	* Makefile.am (libgtkhtmldir): add trailing gtkhtml to not break
